--- a/gAIn/package.json
+++ b/gAIn/package.json
@@ -21,10 +21,13 @@
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "angular": "^1.8.3",
     "bootstrap": "^5.3.0-alpha1",
+    "express": "^4.18.2",
     "jquery": "^3.6.3",
     "ngx-bootstrap": "^10.2.0",
+    "openai": "^3.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "twilio": "^4.8.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
