--- a/gAIn/package.json
+++ b/gAIn/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.6.3",
     "ngx-bootstrap": "^10.2.0",
     "openai": "^3.2.1",
+    "openapi": "^1.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "twilio": "^4.8.0",
